# Agent365-Demo

./: .env.template  .gitignore  README.md  ToolingManifest.json  a365.config.json  agent.py  agent_interface.py  host_agent_server.py  local_authentication_options.py  pyproject.toml  token_cache.py  web_chat.py
docs/: design.md
manifest/: manifest.json
